kubernetes/overlays/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-v1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: sweetrpg-admin-strip-prefix-api@kubernetescrd
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik
  rules:
    - host: sweetrpg.local
      http:
        paths:
          - pathType: Prefix
            path: /api/admin
            backend:
              service:
                name: api-v1
                port:
                  name: http
